@@ -391,6 +391,70 @@ return|return
 name|moduleDescriptor
 return|;
 block|}
+specifier|public
+specifier|static
+name|DefaultModuleDescriptor
+name|newBasicInstance
+parameter_list|(
+name|ModuleRevisionId
+name|mrid
+parameter_list|,
+name|Date
+name|publicationDate
+parameter_list|)
+block|{
+name|DefaultModuleDescriptor
+name|moduleDescriptor
+init|=
+operator|new
+name|DefaultModuleDescriptor
+argument_list|(
+name|mrid
+argument_list|,
+literal|"release"
+argument_list|,
+name|publicationDate
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|moduleDescriptor
+operator|.
+name|addConfiguration
+argument_list|(
+operator|new
+name|Configuration
+argument_list|(
+name|DEFAULT_CONFIGURATION
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|moduleDescriptor
+operator|.
+name|addArtifact
+argument_list|(
+name|DEFAULT_CONFIGURATION
+argument_list|,
+operator|new
+name|MDArtifact
+argument_list|(
+name|moduleDescriptor
+argument_list|,
+name|mrid
+operator|.
+name|getName
+argument_list|()
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|moduleDescriptor
+return|;
+block|}
 comment|/**      * Transforms the given module descriptor of the given namespace and return      * a new module descriptor in the system namespace.      *       *<i>Note that dependency exclude rules are not converted in system namespace, because they aren't       * transformable (the name space hasn't the ability to convert regular expressions)</i>      *       * @param md      * @param ns      * @return      */
 specifier|public
 specifier|static
