@@ -202,6 +202,13 @@ name|_pattern
 init|=
 literal|null
 decl_stmt|;
+comment|// use poms if m2 compatible is true
+specifier|private
+name|boolean
+name|_usepoms
+init|=
+literal|true
+decl_stmt|;
 specifier|public
 name|IBiblioResolver
 parameter_list|()
@@ -221,6 +228,9 @@ block|{
 if|if
 condition|(
 name|isM2compatible
+argument_list|()
+operator|&&
+name|isUsepoms
 argument_list|()
 condition|)
 block|{
@@ -296,6 +306,9 @@ block|{
 if|if
 condition|(
 name|isM2compatible
+argument_list|()
+operator|&&
+name|isUsepoms
 argument_list|()
 condition|)
 block|{
@@ -615,6 +628,9 @@ if|if
 condition|(
 name|isM2compatible
 argument_list|()
+operator|&&
+name|isUsepoms
+argument_list|()
 condition|)
 block|{
 name|setIvyPatterns
@@ -879,6 +895,31 @@ operator|.
 name|getArtifactPatterns
 argument_list|()
 return|;
+block|}
+specifier|public
+name|boolean
+name|isUsepoms
+parameter_list|()
+block|{
+return|return
+name|_usepoms
+return|;
+block|}
+specifier|public
+name|void
+name|setUsepoms
+parameter_list|(
+name|boolean
+name|usepoms
+parameter_list|)
+block|{
+name|_usepoms
+operator|=
+name|usepoms
+expr_stmt|;
+name|updateWholePattern
+argument_list|()
+expr_stmt|;
 block|}
 block|}
 end_class
