@@ -27,6 +27,7 @@ Changes:
   - NEW: adding to SPECIAL_MEANINGS in LatestRevisionStrategy (IVY-121)
   - NEW: Allow use of system properties in ivyconf.xml (IVY-228)
 
+  - IMPROVE: possible to use m2compatible without automatically using POMs as well (IVY-263)
   - IMPROVE: support for circular dependencies (IVY-202)
   - IMPROVE: make status list configurable (IVY-242)
   - IMPROVE: use only ivy patterns for listing revisions when module desciptor is required (allownomd = false) (IVY-166)
